--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,13 @@
             "request": "launch",
             "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Test transcation",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/tests/transaction.py",
+            "console": "integratedTerminal"
         }
     ]
 }
