--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   on-develop-branch-check:
-    runs-on: Linux
+    runs-on: ubuntu-latest
     outputs:
       on_develop: ${{ steps.contains_tag.outputs.retval }}
     steps:
@@ -59,7 +59,7 @@ jobs:
 
   build:
     name: Build and Push
-    runs-on: Linux
+    runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Checkout
@@ -97,7 +97,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
   deploy:
     name: Deploy to s2b
-    runs-on: Linux
+    runs-on: ubuntu-latest
     needs:
       - on-develop-branch-check
       - build
