--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -30,7 +30,7 @@ jobs:
 
   test:
     name: Test
-    runs-on: Linux
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
