--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -14,20 +14,6 @@ env:
   DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  on-develop-branch-check:
-    runs-on: ubuntu-latest
-    outputs:
-      on_develop: ${{ steps.contains_tag.outputs.retval }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: rickstaa/action-contains-tag@v1
-        id: contains_tag
-        with:
-          reference: "develop"
-          tag: "${{ github.ref }}"
-
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -61,6 +47,7 @@ jobs:
     name: Build and Push
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/develop'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -99,9 +86,7 @@ jobs:
     name: Deploy to s2b
     runs-on: ubuntu-latest
     needs:
-      - on-develop-branch-check
       - build
-    if: ${{ needs.on-develop-branch-check.outputs.on_develop == 'true' }}
     steps:
       - uses: actions/checkout@v4
       - name: update compose file
