Update mypy command in build_deploy.yaml

--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Run mypy
         working-directory: .
         run: |
-          poetry run mypy
+          poetry run mypy .
 
   build:
     name: Build and Push
