--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -44,7 +44,7 @@ jobs:
           poetry run mypy .
 
   build:
-    name: Build and Push
+    name: Build and push
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/develop'
