long polling is not efficient

--- a/project.env
+++ b/project.env
@@ -1,7 +1,11 @@
 INFURA_PROJECT_ID=12345678
 
-INFURA_NETWORK=https://linea-goerli.infura.io/v3/${INFURA_PROJECT_ID}
-INFURA_NETWORK_WSS=wss://linea-goerli.infura.io/ws/v3/${INFURA_PROJECT_ID}
+LINEA_GOERLI_NETWORK=https://linea-goerli.infura.io/v3/${INFURA_PROJECT_ID}
+LINEA_GOERLI_NETWORK_WSS=wss://linea-goerli.infura.io/ws/v3/${INFURA_PROJECT_ID}
+POLYGON_NETWORK=https://polygon-mainnet.infura.io/v3/${INFURA_PROJECT_ID}
+POLYGON_NETWORK_WSS=wss://polygon-mainnet.infura.io/ws/v3/${INFURA_PROJECT_ID}
+ETHER_NETWORK=https://mainnet.infura.io/v3/${INFURA_PROJECT_ID}
+ETHER_NETWORK_WSS=wss://mainnet.infura.io/ws/v3/${INFURA_PROJECT_ID}
 
 
 # INFURA_NETWORK=https://mainnet.infura.io/v3/${INFURA_PROJECT_ID}
